--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,9 +3,9 @@
   --dark-primary: #c66900;
   --light-primary: #ffc947;
 
-  --secondary: #ff9800;
-  --dark-secondary: #c66900;
-  --light-secondary: #ffc947;
+  --secondary: #3f962c;
+  --dark-secondary: #134b07;
+  --light-secondary: #74df5c;
   
   --gray: #757575;
   --error: #ca3a41;
@@ -40,7 +40,7 @@
   top: 56px;
   background: white;
   text-align: center;
- transform: translateY(100vh);
+  transform: translateY(100vh);
   transition: transform .5s;
 }
 
@@ -110,4 +110,50 @@
   justify-content: center;  /* centra horizontalmente */
   gap: 15px;                /* espacio entre botones */
   flex-wrap: wrap;          /* si la pantalla es MUY chica, permite que bajen */
+}
+
+.app--install {
+  background: var(--primary);
+  color: var(--white) !important;
+  display: flex;
+  flex-direction: row;
+}
+
+.app--install:hover {
+  background: var(--dark-primary) !important;
+}
+
+.app--install div:first-child {
+  text-align: left;
+  font-size: 12px;
+  padding: 5px 0 8px 5px;
+}
+
+.app--install div:last-child {
+  border:1px solid rgba(255, 201, 71, .5);
+  border-radius: 4px;
+  padding: 5px 8px;
+}
+
+.notifications--install{
+  background: var(--secondary);
+  color: var(--white) !important;
+  display: flex;
+  flex-direction: row;
+}
+
+.notifications--install:hover{
+    background: var(--dark-secondary) !important;
+}
+
+.notifications--install div:first-child {
+  text-align: left;
+  font-size: 12px;
+  padding: 5px 0 8px 5px;
+}
+
+.notifications--install div:last-child {
+  border:1px solid rgba(148, 243, 157, 0.5);
+  border-radius: 4px;
+  padding: 5px 8px;
 }
